# hidlink

./: .gitmodules  README.md
doc/: hidlink.drawio  hidlink_config.txt
firmware/: sdkconfig.old
firmware/main/: CMakeLists.txt  main.c  main.h
firmware_esp32/: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware_esp32/main/: CMakeLists.txt  ble_cdtp.c  ble_gap.c  ble_gap.h  ble_gatts.c  ble_gatts.h  bt_gap.c  bt_gap.h  bt_hid_host.c  bt_hid_host.h  esp_hid_gap.c  esp_hid_gap.h  hidlink.c  hidlink.h  main.c  main.h
firmware_rp2040/: CMakeLists.txt  README.md  hidlink_uart.c  hidlink_uart.h  main.c  main.h
firmware_rp2040/src/: hidlink_uart.c  hidlink_uart.h  main.c  main.h  ring.c
hardware/: README.md
hardware_breadboard/: README.md  hidlink.fzz
hardware_pcb/: README.md
mobile_app/: README.md
